# libgcrypt

./: .appveyor.yml  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  rustfmt.toml
.github/workflows/: ci.yml
docker/: Dockerfile.static
libgcrypt-sys/: Cargo.toml  build.rs  consts.rs  funcs.rs  lib.rs  shim.c  types.rs
src/: alloc.rs  buffer.rs  cipher.rs  digest.rs  error.rs  kdf.rs  lib.rs  mac.rs  pkey.rs  rand.rs  sexp.rs  utils.rs
src/mpi/: ec.rs  integer.rs  mod.rs  point.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: basic.rs
