[package]
name = "gcrypt"
version = "0.6.1"
authors = ["John Schug <john.ips.schug@gmail.com>"]
license = "LGPL-2.1"
repository = "https://github.com/gpg-rs/libgcrypt"
documentation = "https://docs.rs/gcrypt"
categories = ["cryptography", "api-bindings"]
keywords = ["crypto", "cryptography"]
description = "Libgcrypt bindings for Rust"

[badges]
travis-ci = { repository = "gpg-rs/libgcrypt" }
maintenance = { status = "experimental" }

[features]
default = ["bundled"]
bundled = ["libgcrypt-sys/bundled", "gpg-error/bundled"]
nightly = []

[dependencies]
libc = "0.2"
bitflags = "1"
lazy_static = "1"
cstr-argument = "0.1"
gpg-error = { version = "0.4", default-features = false }

[dependencies.libgcrypt-sys]
path = "libgcrypt-sys"
version = "0.6.1"
features = ["shim"]
default-features = false

[workspace]
