[package]
name = "gcrypt"
version = "0.7.0"
edition = "2018"
authors = ["John Schug <john.ips.schug@gmail.com>"]
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/gpg-rs/libgcrypt"
documentation = "https://docs.rs/gcrypt"
categories = ["cryptography", "api-bindings"]
keywords = ["crypto", "cryptography"]
description = "Libgcrypt bindings for Rust"

[badges]
travis-ci = { repository = "gpg-rs/libgcrypt" }
maintenance = { status = "experimental" }

[features]
nightly = []

[dependencies]
libc = "0.2"
bitflags = "1"
once_cell = "1"
cstr-argument = "0.1"
gpg-error = "0.5"

[dependencies.ffi]
package = "libgcrypt-sys"
path = "libgcrypt-sys"
version = "0.7.0"
features = ["shim"]

[workspace]
members = ["systest"]
