[package]
name = "libgcrypt-sys"
version = "0.5.4"
authors = ["John Schug <john.ips.schug@gmail.com>"]
license = "LGPL-2.1"
description = "Raw bindings for libgcrypt"
repository = "https://github.com/johnschug/rust-gcrypt"
documentation = "https://docs.rs/libgcrypt-sys"
categories = ["cryptography", "external-ffi-bindings"]
keywords = ["crypto", "cryptography"]
links = "gcrypt"
build = "build.rs"

[badges]
travis-ci = { repository = "johnschug/rust-gcrypt" }
appveyor = { repository = "johnschug/rust-gcrypt" }
maintenance = { status = "experimental" }

[lib]
name = "libgcrypt_sys"
path = "lib.rs"

[features]
shim = []

[build-dependencies]
cfg-if = "0.1"
semver = "0.8"
gcc = "0.3"

[dependencies]
libc = "0.2"
libgpg-error-sys = "0.2"
