[package]
name = "libgcrypt-sys"
version = "0.6.0"
authors = ["John Schug <john.ips.schug@gmail.com>"]
license = "LGPL-2.1"
repository = "https://github.com/gpg-rs/libgcrypt/libgcrypt-sys"
documentation = "https://docs.rs/libgcrypt-sys"
categories = ["cryptography", "external-ffi-bindings"]
keywords = ["crypto", "cryptography"]
description = "Raw bindings for libgcrypt"
links = "gcrypt"
build = "build.rs"

[badges]
travis-ci = { repository = "gpg-rs/libgcrypt" }
maintenance = { status = "experimental" }

[lib]
name = "libgcrypt_sys"
path = "lib.rs"

[features]
default = ["bundled"]
bundled = ["libgpg-error-sys/bundled"]
shim = []

[build-dependencies]
cfg-if = "0.1"
cc = "1.0.2"

[dependencies]
libc = "0.2"
libgpg-error-sys = { version = "0.4", default-features = false }
