[package]
name = "libgcrypt-sys"
version = "0.7.1"
edition = "2018"
authors = ["John Schug <john.ips.schug@gmail.com>"]
license = "LGPL-2.1"
repository = "https://github.com/gpg-rs/libgcrypt/libgcrypt-sys"
documentation = "https://docs.rs/libgcrypt-sys"
categories = ["cryptography", "external-ffi-bindings"]
keywords = ["crypto", "cryptography"]
description = "Raw bindings for libgcrypt"
links = "gcrypt"
build = "build.rs"

[badges]
travis-ci = { repository = "gpg-rs/libgcrypt" }
maintenance = { status = "experimental" }

[lib]
name = "libgcrypt_sys"
path = "lib.rs"

[features]
shim = []

[build-dependencies]
cc = "1.0.2"

[dependencies]
libc = "0.2"
libgpg-error-sys = "0.5"

[target.'cfg(windows)'.build-dependencies]
winreg = "0.7"
